# edge-benchmarking-client

./: README.md  pyproject.toml
edge_benchmarking_client/: client.py  endpoints.py
examples/: .env.example  .gitignore  main.ipynb  main.py  setup.sh
examples/densenet_onnx/: .gitignore
tests/: test_client.py
