[tool.poetry]
name = "edge-benchmarking-client"
version = "0.1.0"
description = "Client library for the AgrifoodTEF Edge Benchmarking Service"
authors = ["Andreas Schliebitz <a.schliebitz@hs-osnabrueck.de>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "edge_benchmarking_client" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
validators = "0.34.0"
python-dotenv = "1.0.1"
edge-benchmarking-types = { git = "https://github.com/agrifoodTEF-de/edge-benchmarking-types.git" }

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
numpy = "1.26.4"
matplotlib = "3.10.0"
pandas = "2.2.3"
torch = "2.6.0"
pytest = "8.3.4"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
